Fix layout on mobile devices

--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,11 @@
 *{
   box-sizing: border-box;
 }
+.App{
+  width: 100vw;
+  margin: 0;
+  padding:0;
+}
 body {
   color: #093D65;
   background-color: #fdfdfd;
@@ -12,36 +17,46 @@ body {
 a {
   text-decoration: none;
 }
-
+a:visited:not(.btn){
+  color: #093D65;
+}
 .active {
   border-bottom: .25rem solid #F98E54;
   color: #F98E54;
 }
 
 nav {
-  width: 100%;
+  /* width: calc(100% - 5vw); */
   display: flex;
   flex-wrap: wrap;
-  /* height: min(10rem, 25vw); */
   font-size: min(5vw, 1rem);
   align-items: center;
   justify-content: space-between;
-  padding-left: min(5%,2rem);
-}
-nav>ul{
-  flex:1;
-  padding-inline-start: 1rem;
+  margin-inline: 2vw;
+  padding-left: 1rem;
+  padding-top: 2rem;
+  border-left: 4px solid #093D65;
 }
 nav ul {
-  width: 50%;
+  /* flex:1;   */
+  display: grid;
+  column-gap: .1rem;
+  grid-auto-flow: column;
+  padding-inline-start: 0;
+  width: max-content;
   min-width: 300px;
-  border-left: .25rem solid #093D65;
-  margin-left: 1rem;
+  margin-right: auto;
 }
 
 nav li {
   display: inline-block;
-  margin-right: min(5%, 2rem);
+  
+}
+nav li:first-of-type a{
+  padding-left: 0;
+}
+nav li:last-of-type a{
+  padding-right: 0;
 }
 nav li:hover{
   color: white;
@@ -49,7 +64,7 @@ nav li:hover{
 }
 nav li a{
   display:inline-block;
-  padding: 1rem .5rem;
+  padding: 1rem 1vw;
 }
 nav li:hover a{
   color:white;
@@ -58,6 +73,7 @@ nav li:hover a{
   opacity: .9;
   width: min(200px,20%);
   min-width: 10rem;
+  margin-right: 1rem;
 }
 .search-bar{
   display: flex;
@@ -98,7 +114,7 @@ nav li:hover a{
   align-items: center;
   min-height: 3rem;
   align-items: stretch;
-  justify-self: flex-end;  margin-left: 1rem;
+  justify-self: flex-end;  
 }
 .btn{
   border: none;
@@ -109,6 +125,12 @@ nav li:hover a{
 .btn-dark{
   background-color: #093D65;
   color: white;
+}
+.btn-imaged{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 5%;
 }
 .btn:hover,.btn-dark:hover{
   background:#093d654a;
@@ -152,21 +174,23 @@ nav li:hover a{
 .hero{
   /* height: 20vh; */
   min-height: 300px;
+  flex-direction: column-reverse;
   display: flex;
   align-items: center;
 }
 .hero-image-container{
-  height: 100%;
+  /* height: 40vh; */
+  width: 100%;
 }
 .hero-image-container img{
-  width: min(40vw, 500px);
-  height: max(200px,100%);
-  max-height: 40vh;
-  margin-left: 5vw;
+  width: 100%;
+  height: 30vh;
+  /* max-height: 40vh; */
+  /* margin-left: 5vw; */
   object-fit: cover;
 }
 .main-container{
-  padding: 5vh 10vw;
+  padding: 5vh 3vw;
 }
 .btn-shop-now{
   margin-top: 2rem;
@@ -174,20 +198,30 @@ nav li:hover a{
 }
 
 .product-grid-container{
-  display: flex;
+  display: grid;
   gap: 2rem;
-  flex-wrap: wrap;
+  /* justify-content: center; */
+  /* flex-wrap: wrap; */
+  grid-template-columns: repeat(auto-fill,minmax(280px,30%));
+  align-items: stretch;
 }
 .product-card{
-  max-width: 280px;
+
+  /* max-width: 280px; */
   border: 1px solid #093D6543;
   cursor: pointer;
+  /* height: 100%; */
+  min-height: 100%;
 }
-.product-card h1{
+.product-title{
   margin: 0;
   margin-bottom: 1rem;
+  color: #093D65;
+  font-family: 'Libre Franklin',Verdana,sans-serif;
+  font-size: 1.2rem;
+  font-weight: 400;
 }
-.product-card h2{
+.product-subtitle{
   margin: 0;
   margin-bottom: 1rem;
   font-size: 1.2rem;
@@ -195,18 +229,19 @@ nav li:hover a{
 }
 .product-card p{
   margin-bottom: 0;
+  color: #093D65;
 }
 .product-card-image{
   width: 100%;
   height: auto;
-  max-height: 200px;
+  height: 200px;
   object-position: top;
-  object-fit: cover;
+  object-fit: contain;
   transition: transform .3s;
 }
 .product-card-image:hover{
   
-  transform: scale(1.2);
+  transform:  scale(1.2);
 }
 .product-details-container{
   padding: 1rem;
@@ -215,7 +250,7 @@ nav li:hover a{
 .product-card .product-subtitle,
 .product-card .product-description{
   display: -webkit-box;
-  -webkit-line-clamp: 3;
+  -webkit-line-clamp: 2;
   -webkit-box-orient: vertical;
   overflow: hidden;
 }
@@ -225,4 +260,201 @@ nav li:hover a{
 }
 .section-title{
   margin-block:3rem
+}
+.loader-container{
+  min-height: 200px;
+  width: 100%;
+  display: grid;
+  place-content: center;
+}
+.loader-container img{
+  width: 200px;
+  height: 200px;
+}
+.product-sheet{
+  /* min-height: 300px; */
+  border: 1px solid #093D65c3;
+  min-height: 40vh;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 1rem;
+}
+.product-sheet .product-image{
+  width: 80%;
+  height: auto;
+  display: inline-block;
+  margin: 2rem auto;
+}
+.product-image-container{
+  width: 40%;
+  display: grid;
+  place-content: center;
+}
+.product-sheet .product-name{
+  font-size: 1.2rem;
+  margin-block: 2rem;
+}
+.product-sheet .product-details{
+  margin-right: auto;
+  display: flex;
+  flex-direction: column;
+}
+.product-sheet .product-description{
+  margin-top: 0;
+  margin-bottom: 1rem;
+}
+.separator{
+  border: none;
+  margin: 0;
+  border-bottom: 1px solid #093D65c3;
+  min-width: 100%;
+}
+.quantity-selector{
+  margin-top: 1rem;
+  display: flex;
+  align-items: center;
+  justify-content: stretch;
+  margin-bottom: 1rem;
+  /* border: 1px solid  #093D65; */
+}
+.quantity-selector>*{
+  width: 100%;
+}
+.quantity-selector .btn{
+  flex-basis: 2;
+  font-size: 1.2rem;
+  font-weight: 300;
+}
+.quantity-selector .quantity{
+  flex-basis: 2;
+  padding-inline: 2rem;
+  font-weight: 600;
+  text-align: center;
+}
+.product-sheet .buy-options{
+  display: flex;
+  gap: 1rem;
+}
+.product-sheet .buy-options>*{
+  width: 100%;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+@media (min-width:800px) {
+  nav{
+    border-left: none;
+  }
+  nav ul{
+    border-left: .25rem solid #093D65;
+  }
+  nav li:first-of-type{
+    margin-left: 1rem;
+  }
+
+  .hero{
+    flex-direction: row;
+  }
+  .hero-image-container img{
+    width: min(40vw, 500px);
+    height: max(200px,100%);
+    max-height: 40vh;
+    margin-left: 5vw;
+    object-fit: cover;
+  }
+
+  .main-container{
+    padding: 5vh 5vw;
+  }
+  .product-sheet{
+    /* min-height: 300px; */
+    width: 100%;
+    border: 1px solid #093D65c3;
+    min-height: 40vh;
+    display: flex;
+    flex-direction: row;
+  }
+  .product-sheet .product-image{
+    width: 80%;
+    height: auto;
+    display: inline-block;
+    margin: 2rem auto;
+  }
+  .product-image-container{
+    width: 40%;
+    display: grid;
+    place-content: center;
+  }
+  .product-sheet .product-name{
+    font-size: 1.2rem;
+    margin-block: 2rem;
+  }
+  .product-sheet .product-details{
+    width: 40%;
+    margin-right: auto;
+    display: flex;
+    flex-direction: column;
+  }
+  .product-sheet .product-description{
+    margin-top: 0;
+    margin-bottom: 1rem;
+  }
+  .separator{
+    border: none;
+    margin: 0;
+    border-bottom: 1px solid #093D65c3;
+    min-width: 100%;
+  }
+  .quantity-selector{
+    margin-top: 1rem;
+    display: flex;
+    align-items: center;
+    justify-content: stretch;
+    margin-bottom: 1rem;
+    /* border: 1px solid  #093D65; */
+  }
+  .quantity-selector>*{
+    width: 100%;
+  }
+  .quantity-selector .btn{
+    flex-basis: 2;
+    font-size: 1.2rem;
+    font-weight: 300;
+  }
+  .quantity-selector .quantity{
+    flex-basis: 2;
+    padding-inline: 2rem;
+    font-weight: 600;
+    text-align: center;
+  }
+  .product-sheet .buy-options{
+    display: flex;
+    gap: 1rem;
+  }
+  .product-sheet .buy-options>*{
+    width: 100%;
+  }
+  .action-buttons{
+    width: 80%;
+  }
 }
